css/style.css
html {
    scroll-behavior: smooth;
}

body{
    font-family: "Times New Roman", sans-serif;
    font-size: 18px;
    color: black;
    margin: auto;
}

a{
    color: blue;
    text-decoration: none;
}

.current{
    color: purple;
}

p{
    text-align: left;
    font-size: 16px;
    margin: auto 20px;
}

h1{
    text-align: center;
    font-size: 40px;
    margin-top: 15px;
    margin-bottom: 15px;
}

h2{
    text-align: center;
    font-size: 30px;
}

.nav{
    text-align: center;
    font-size: 20px;
}

nav a:hover{
  text-decoration: underline; 
}

a:focus{
  border: 2px solid black;
}

.row1 img{
    display: block;
    margin: 15px auto;
}

.title{
    font-size: 20px;
    text-align: center;

}

.button, #my2019Btn, #my2018Btn, #my2017Btn, #my2016Btn, #my2015Btn, #my2014Btn{
  background-color: blue;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 8px 45px;
  cursor: pointer;
}

.calendar{
  text-align: center;
}

.reading_list{
  text-align: center;
}

.row2 img{
  display:block;
  margin: 15px auto;

}

h3{
    font-size: 18px;
    text-align: center;
}

h3 img {
  display: inline;
  margin: 20px;
}

#my2019Btn, #my2018Btn, #my2017Btn, #my2016Btn, #my2015Btn, #my2014Btn{
  background-color: blue;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: block;
  font-size: 16px;
  margin: 8px 60px;
  cursor: pointer;
}

#dots{
  text-align: center;
}

ol li{
  margin-left: 60px;
}
div{

}

footer{
  margin-top: 15px;
}

#art2018, #more2019art, #art2017, #art2016, #art2015, #art2014 {
  display: none;
}


@media only screen and (min-width: 800px){
  .container{
    display: grid;
    grid-template-columns: 50px auto 500px auto 100px;
    grid-template-rows: 70px auto auto auto auto 100px;
    grid-gap: 10px;
  }

  h1{
    grid-column: 1 / 2;
    grid-row: 1 / span 1;
  }

  nav ul{
    top: 0;
    display: flex;
    flex-direction: row;
    padding: 10px;
    justify-content: center;
    background-color: red;
  }

  nav a{
    padding: 5px 20px;
    margin: 10px;
  }

  .skip a{
    background: white;
    left: 0;
    padding: 6px;
    position: absolute; 
    top: -40px;     
    -webkit-transition: top 1s ease-out;
    transition: top 1s ease-out;
    z-index: 1;
  }
  
  .skip a:focus{
    position: absolute;
    left: 0;
    top: auto;
    overflow: visible;
  }

  nav a:hover{
    background-color: #BF4E58;
    border: 1px solid white;
    -webkit-transition: 0.3s -webkit-filter linear;
  }

  .row1 {
    grid-column: 1 / 3;
    grid-row: 2 / 4;
  }

  .row2 {
    grid-column: 3 / -1;
    grid-row: 2 / 4;
  }

  .row2 a{
    align-items: center;
  }

  .row1_research{
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    justify-content: center;
    color: red;
  }

  .row1_research li{
    list-style-type: none;
  }

}

@media screen and (prefers-reduced-motion: reduce){
  html{
      scroll-behavior: auto; 
      animation: none;
  }

  .skip a{
    background: white;
    left: 0;
    padding: 6px;
    position: absolute;
    top: -40px;
    -webkit-transition: initial;
    transition: initial;
    z-index: 1;
  }

  .skip a:focus{
    top:0;
  }
}

